Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4125

Wrong non-active conditions check

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 6.0.0
    • 6.1.0
    • Core
    • None

    Description

      In the NetHandler::manage_active_queue() function:

      we should close inactivity timeout vc that means "vc->next_activity_timeout_at <= now".

      but "vc->next_activity_timeout_at > now" here.

      It's call _close_vc() for an activity vc and close vc early.

        for (; vc != NULL; vc = vc_next) {
          if ((vc->next_inactivity_timeout_at > now) || (vc->next_activity_timeout_at > now)) {
            _close_vc(vc, now, handle_event, closed, total_idle_time, total_idle_count);
          }
          if (max_connections_active_per_thread_in > active_queue_size) {
            return true;
          }
        }
      

      Attachments

        Issue Links

          Activity

            People

              bcall Bryan Call
              oknet Chao Xu
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: