TS-4125: wrong non-active conditions check

This closes #416

(cherry picked from commit c26952d95104067d45704d6c81eb3bc038fd2282)